--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>
-      Student Chesta Dewangan
+<html><head><meta http-equiv="refresh" content="0;home/index.html"/></head></html>n
     </title>
     <meta charset="UTF-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"/>
-    <link rel="stylesheet" href="../style.css?v=1758171338567" type="text/css"/>
+    <link rel="stylesheet" href="../style.css?v=1758171758287" type="text/css"/>
   </head>
   <body class="bg-uicblue">
     <div class="bg-uicblue grid place-items-center">
